<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.JoinRoomActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <ImageView
            android:id="@+id/return_join_room_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@drawable/page_callback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_join_room"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_EDEDED" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/tx_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_tip_test"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_room_num"
            style="@style/EditTextStyle.Alignment"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/wb_login_et_background"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/join_room_input_room_number_hint"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_40000000"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_join_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/join_room_btn_selector"
        android:text="@string/btn_join_room_text"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>