<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="@dimen/login_global_sides_padding"
    android:paddingEnd="@dimen/login_global_sides_padding"
    tools:context=".view.LoginActivity">


    <LinearLayout
        android:id="@+id/login_logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/login_logo" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/logo_title"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_sp_20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_account_code"
                style="@style/TextStyle.Alignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="账号"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/et_login_phone"
                style="@style/EditTextStyle.Alignment"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/wb_login_et_background"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/wb_login_account_et_hint_text"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_40000000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle.Alignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/login_pwd_text"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_login_verify_code"
                    style="@style/EditTextStyle.Alignment"
                    android:layout_width="0dp"
                    android:layout_height="47dp"
                    android:layout_weight="2"
                    android:background="@drawable/wb_login_et_background"
                    android:gravity="center_vertical"
                    android:hint="@string/login_input_verification_code_hint"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_40000000" />


                <Button
                    android:id="@+id/et_login_send_verify_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_verification_btn_selector"
                    android:gravity="center"
                    android:text="@string/wb_login_send_code_text"
                    android:textColor="@color/color_8C000000"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/join_room_btn_selector"
            android:enabled="false"
            android:text="@string/wb_login_btn_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/login_registration_terms_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:theme="@style/CheckBox" />

            <TextView
                android:id="@+id/login_registration_terms_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/login_agree_registration_terms_text"
                android:textColor="@color/color_9b9b9b"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/login_regist_tip_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/login_tip_text"
            android:textColor="@color/color_595959"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_app_version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="@string/login_version_text"
        android:textColor="@color/color_73000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>