<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <ImageView
            android:id="@+id/return_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@drawable/page_callback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_update_name"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tx_save_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="@string/title_right_save_name"
            android:textColor="@color/color_A6000000"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_EDEDED" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_E5E5E5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:paddingStart="18dp"
            android:paddingEnd="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/setting_account_name"
                android:textColor="@color/color_73000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_update_name"
                style="@style/EditTextStyle.Alignment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical"
                android:layout_weight="2"
                android:background="@null"
                android:gravity="end|center_vertical"
                android:hint="请填写昵称"
                android:layoutDirection="rtl"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/color_40000000"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>